--- a/client/src/components/userVacations/userVacations.css
+++ b/client/src/components/userVacations/userVacations.css
@@ -3,7 +3,7 @@ div.userVacations {
     max-width: 1331px;
 }
 .vacation-card { 
-    border: 1px solid black;
+    border: 3px solid black;
     background-color: rgb(221, 223, 226);
     display: inline-block;
     width: 400px;
@@ -15,15 +15,23 @@ div.userVacations {
     font-size: small;
     border-radius: 15px;
 }
+.vacation-card:hover {
+    background-color: rgb(237 238 241);
+}
+.vacation-card p , div.followCheck {
+    font-family: cursive;
+}
 
 .vacation-card p.location {
     font-size: x-large;
     text-align: center;
+    font-family: fantasy;
 }
 
 .vacation-card p.description {
     font-size: medium;
     text-align: center;
+    font-family: cursive;
 }
 
 h3 {
@@ -46,7 +54,7 @@ div.img-container p {
     margin: 0px;
 }
 div.img-container img {
-    height: 250px;
+    height: 200px;
     width:100%;
-
+    border-radius: 10px;
 }
